# test_packaging

./: README.md  pyproject.toml  requirements.txt
src/test_package_jh/: __init__.py  example.py
