[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]
description = "Johannes' test package"
name = "test_package_johannes_hendriks"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.1"
[[project.authors]]
email = "johannes.n.hendriks@gmail.com"
name = "johannes Hendriks"
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}